# tqsdk-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  WIKI.md  rustfmt.toml
.github/workflows/: ci.yml
.trae/documents/: remove-legacy-compat.md
.trae/specs/refactor-marketdata-state-api/: checklist.md  spec.md  tasks.md
benches/: marketdata_state.rs  marketdata_state_stress.rs
docs/: CODE_WIKI.md  README.md  architecture.md  migration-marketdata-state.md  migration-remove-legacy-compat.md
docs/archive/: 2026-04-09-python-data-series-refactor.md  README.md  migration-marketdata-state.md
docs/archive/2026-04-15-design-perf-audit/: 2026-04-15-api-design-review.md  review-2026-04-15-design-perf-audit-final.md  review-2026-04-15-design-perf-audit-kiro.md  review-2026-04-15-design-perf-audit-synthesis.md  review-2026-04-15-design-perf-audit-trae.md  review-2026-04-15-design-perf-audit.md
docs/archive/superpowers/: README.md
docs/superpowers/plans/: 2026-04-09-replay-backtest.md  2026-04-09-target-pos-runtime.md  2026-04-10-remove-legacy-compat.md  2026-04-11-breaking-api-consolidation.md  2026-04-11-datamanager-epoch-trade-session.md  2026-04-11-trade-session-reliable-events.md  2026-04-17-public-api-consolidation.md  2026-04-18-public-api-contraction-roadmap.md  2026-04-18-python-backtest-capability-alignment-roadmap.md
docs/superpowers/specs/: 2026-04-09-replay-backtest-design.md  2026-04-09-target-pos-runtime-design.md  2026-04-11-trade-session-reliable-events-design.md  2026-04-17-public-api-consolidation-design.md  2026-04-18-replay-report-design.md
examples/: backtest.rs  custom_logger.rs  data_series.rs  datamanager.rs  doublema.rs  dualthrust.rs  history.rs  option_levels.rs  pivot_point.rs  quote.rs  rbreaker.rs  trade.rs
examples/python/: doublema.py  dualthrust.py  pivot_point.py  rbreaker.py
examples/support/: python_trade_log.rs  replay_dates.rs
samples/candlechart/: Cargo.toml
samples/candlechart/src/: main.rs
samples/polars/: Cargo.toml
samples/polars/src/: main.rs
skills/tqsdk-rs/: SKILL.md
skills/tqsdk-rs/assets/: Cargo.toml  main.rs
skills/tqsdk-rs/references/: client-and-endpoints.md  error-faq.md  example-map.md  ins-and-reference-data.md  market-and-series.md  runtime-and-target-pos.md  simulation-and-backtest.md  tqsdk_rs_guide.md  trading-and-orders.md
src/: auth.rs  backtest.rs  client.rs  datamanager.rs  errors.rs  ins.rs  lib.rs  logger.rs  polars_ext.rs  prelude.rs  quote.rs  series.rs  trade_session.rs  types.rs  utils.rs  websocket.rs
src/auth/: core.rs  mod.rs  permissions.rs  tests.rs  token.rs
src/backtest/: core.rs  mod.rs  parsing.rs
src/cache/: data_series.rs  kline.rs  mod.rs
src/client/: builder.rs  endpoints.rs  facade.rs  live.rs  market.rs  mod.rs  tests.rs
src/compat/: mod.rs  target_pos_scheduler.rs  target_pos_task.rs
src/datamanager/: core.rs  merge.rs  mod.rs  query.rs  tests.rs  watch.rs
src/download/: mod.rs  tests.rs
src/ins/: mod.rs  parse.rs  query.rs  services.rs  tests.rs  trading_status.rs  validation.rs
src/marketdata/: mod.rs  tests.rs
src/polars_ext/: kline.rs  mod.rs  series.rs  tabular.rs  tests.rs  tick.rs
src/quote/: lifecycle.rs  mod.rs  tests.rs  watch.rs
src/replay/: feed.rs  kernel.rs  mod.rs  providers.rs  quote.rs  report.rs  runtime.rs  series.rs  session.rs  sim.rs  tests.rs  types.rs
src/runtime/: account.rs  core.rs  engine.rs  errors.rs  execution.rs  market.rs  mod.rs  registry.rs  tests.rs  types.rs
src/runtime/modes/: backtest.rs  live.rs  mod.rs
src/series/: api.rs  mod.rs  processing.rs  subscription.rs  tests.rs
src/trade_session/: core.rs  events.rs  mod.rs  ops.rs  tests.rs  watch.rs
src/types/: helpers.rs  market.rs  mod.rs  query.rs  rangeset.rs  series.rs  tests.rs  trading.rs
src/websocket/: backpressure.rs  core.rs  message.rs  mod.rs  quote.rs  reconnect.rs  trade.rs  trading_status.rs
tqsdk-rs/: Cargo.toml  README.md
tqsdk-rs/examples/: history.rs  quote.rs
tqsdk-rs/examples/v1alpha1/: history.rs  quote.rs
tqsdk-rs/src/: auth.rs  client.rs  datamanager.rs  lib.rs  logger.rs  quote.rs  series.rs  trade_session.rs  types.rs  utils.rs  websocket.rs
tqsdk-rs/src/v1alpha1/: auth.rs  client.rs  datamanager.rs  errors.rs  logger.rs  mod.rs  polars_ext.rs  quote.rs  series.rs  trade_session.rs  types.rs  utils.rs  websocket.rs
(+20 files in other folders)
