[package]
name = "tqsdk-rs"
version = "0.1.2"
edition = "2024"
authors = ["pseudocodes@gmail.com"]
description = "天勤 TQSDK Rust 封装提供获取 TQSDK 行情, K 线数据以及实盘交易接口"
license = "Apache-2.0"
repository = "https://github.com/pseudocodes/tqsdk-rs"
keywords = ["tqsdk", "tqsdk-rs", "shinnytech", "quant", "trader"]
categories = ["api-bindings", "finance"]

[dependencies]
# WebSocket - yawc 必须使用
yawc = { version = "0.3.3", features = ["zlib"] }

reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "stream",
    "charset",
    "http2",
    "rustls-tls-native-roots",
] } # HTTP Client - 需要 gzip, br, stream

# 异步运行时
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
async-stream = "0.3.6"
async-channel = "2.5.0"
futures = "0.3.32"

# Async trait
async-trait = "0.1.89"

# JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "ansi",
    "local-time",
] }

# 错误处理
thiserror = "2.0.18"

# 时间
chrono = { version = "0.4.41", features = ["serde"] }

# 其他
uuid = { version = "1.22.0", features = ["v4", "serde"] }
url = "2.5.8"
rand = "0.9.2"

# Polars - 数据分析
polars = { version = "0.53.0", features = ["lazy", "dtype-datetime"], optional = true }

[features]
default = []
polars = ["dep:polars"]

[dev-dependencies]
tracing-appender = "0.2.4"

[[example]]
name = "quote"
path = "examples/quote.rs"

[[example]]
name = "history"
path = "examples/history.rs"

[[example]]
name = "trade"
path = "examples/trade.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
