[package]
name = "candlechart"
version = "0.1.0"
edition = "2024"

[dependencies]
tqsdk-rs = { path = "../../tqsdk-rs" }

tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
async-channel = "2.3.1"
futures = "0.3.31"

# Async trait
async-trait = "0.1.89"

# JSON
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "ansi",
] }

chrono = { version = "0.4.42", features = ["serde"] }

cli-candlestick-chart = "0.4.1"
